--- a/src/main/resources/com/example/lms/views/admin-dashboard.fxml
+++ b/src/main/resources/com/example/lms/views/admin-dashboard.fxml
@@ -76,7 +76,7 @@
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
             </Button>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="sidebar-button" text="Backup & Restore">
+            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="sidebar-button" text="Backup &amp; Restore">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
