--- a/src/main/resources/com/example/lms/views/admin-dashboard.fxml
+++ b/src/main/resources/com/example/lms/views/admin-dashboard.fxml
@@ -51,32 +51,27 @@
    <left>
       <VBox prefHeight="708.0" prefWidth="200.0" styleClass="sidebar" BorderPane.alignment="CENTER">
          <children>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="sidebar-button-active" text="Dashboard">
+            <Button fx:id="dashboardBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onDashboardClick" styleClass="sidebar-button-active" text="Dashboard">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="20.0" />
                </VBox.margin>
             </Button>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="sidebar-button" text="Manage Users">
+            <Button fx:id="usersBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onUsersClick" styleClass="sidebar-button" text="Manage Users">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
             </Button>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="sidebar-button" text="Manage Librarians">
+            <Button fx:id="booksBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onBooksClick" styleClass="sidebar-button" text="Manage Books">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
             </Button>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="sidebar-button" text="System Settings">
+            <Button fx:id="staffBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onStaffClick" styleClass="sidebar-button" text="Manage Staff">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
             </Button>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="sidebar-button" text="Reports">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
-               </VBox.margin>
-            </Button>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="sidebar-button" text="Backup &amp; Restore">
+            <Button fx:id="settingsBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onSettingsClick" styleClass="sidebar-button" text="System Settings">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
@@ -90,16 +85,14 @@
       </VBox>
    </left>
    <center>
-      <TabPane prefHeight="200.0" prefWidth="200.0" styleClass="tab-pane" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
-        <tabs>
-          <Tab text="Dashboard">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <VBox layoutX="14.0" layoutY="14.0" prefHeight="649.0" prefWidth="796.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <padding>
-                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                           </padding>
+      <StackPane fx:id="contentArea" BorderPane.alignment="CENTER">
+         <children>
+            <AnchorPane>
+               <children>
+                  <VBox layoutX="14.0" layoutY="14.0" prefHeight="649.0" prefWidth="796.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <padding>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                     </padding>
                            <children>
                               <Label text="System Overview">
                                  <font>
@@ -277,41 +270,11 @@
                               </TableView>
                            </children>
                         </VBox>
-                     </children>
-                  </AnchorPane>
-            </content>
-          </Tab>
-          <Tab text="System Settings">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                     <children>
-                        <VBox layoutX="14.0" layoutY="14.0" prefHeight="649.0" prefWidth="796.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                           <padding>
-                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                           </padding>
-                           <children>
-                              <Label text="System Settings">
-                                 <font>
-                                    <Font name="System Bold" size="18.0" />
-                                 </font>
-                                 <VBox.margin>
-                                    <Insets bottom="20.0" />
-                                 </VBox.margin>
-                              </Label>
-                              <TableView prefHeight="579.0" prefWidth="756.0" styleClass="book-table" VBox.vgrow="ALWAYS">
-                                <columns>
-                                  <TableColumn prefWidth="250.0" text="Setting Key" />
-                                  <TableColumn prefWidth="350.0" text="Value" />
-                                    <TableColumn prefWidth="150.0" text="Actions" />
-                                </columns>
-                              </TableView>
                            </children>
                         </VBox>
                      </children>
                   </AnchorPane>
-            </content>
-          </Tab>
-        </tabs>
-      </TabPane>
+               </children>
+            </StackPane>
    </center>
 </BorderPane>
