feat: add admin dashboard UI and make notes field nullable in reservations table

--- a/src/main/resources/com/example/lms/views/admin-home.fxml
+++ b/src/main/resources/com/example/lms/views/admin-home.fxml
@@ -77,7 +77,7 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <Label fx:id="pendingFinesLabel" styleClass="stat-value" text="$175.50">
+                        <Label fx:id="pendingFinesLabel" styleClass="stat-value" text="\$175.50">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
