--- a/src/main/resources/com/example/lms/views/admin-dashboard.fxml
+++ b/src/main/resources/com/example/lms/views/admin-dashboard.fxml
@@ -1,22 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.BarChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.chart.PieChart?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.lms.controller.AdminDashboardController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.lms.controller.AdminDashboardController">
    <top>
       <HBox alignment="CENTER_LEFT" prefHeight="60.0" prefWidth="1024.0" styleClass="top-bar" BorderPane.alignment="CENTER">
          <children>
@@ -50,7 +40,7 @@
    <left>
       <VBox prefHeight="708.0" prefWidth="200.0" styleClass="sidebar" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="dashboardBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onDashboardClick" styleClass="sidebar-button-active" text="Dashboard">
+            <Button fx:id="dashboardBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#onDashboardClick" styleClass="sidebar-button" text="Dashboard">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="20.0" />
                </VBox.margin>
