--- a/src/main/resources/com/example/lms/views/librarian-dashboard.fxml
+++ b/src/main/resources/com/example/lms/views/librarian-dashboard.fxml
@@ -48,7 +48,7 @@
    <left>
       <VBox prefHeight="708.0" prefWidth="200.0" styleClass="sidebar" BorderPane.alignment="CENTER">
          <children>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="sidebar-button-active" text="Manage Books">
+            <Button fx:id="manageBooksBtn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#showManageBooksView" styleClass="sidebar-button-active" text="Manage Books">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="20.0" />
                </VBox.margin>
@@ -58,7 +58,7 @@
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
             </Button>
-            <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="sidebar-button" text="Return Books">
+            <!-- <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" styleClass="sidebar-button" text="Return Books">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
@@ -77,7 +77,7 @@
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
-            </Button>
+            </Button> -->
          </children>
       </VBox>
    </left>
